data/all_generated_tests/raw_wast_tests/return_IncorrectConditionEvaluation_2863.wast
;; 2. **Unreachable Code Path Handling**:    - Test a function where conditional branches (`br_if`) are used to create multiple unreachable code paths followed by a return instruction. Validate if the return instruction correctly finalizes the function.    - **Reasoning**: Ensures the `popE` method correctly identifies empty stacks in unreachable paths, validating error handling for empty value stacks.

(assert_invalid
  (module
    (func $unreachable-conditional-return (result i32)
      (i32.const 0)
      (block
        (br_if 0 (i32.const 1))
        (return))
    )
  )
  "type mismatch"
)